--- a/src/Mainpage_CSS/modules/fanmadeshow.less
+++ b/src/Mainpage_CSS/modules/fanmadeshow.less
@@ -4,6 +4,13 @@
 	margin: auto 0;
 }
 
+.featured-picture-img {
+	img {
+		max-height: 250px;
+		width: auto;
+	}
+}
+
 // 修复1.43导致的同人展示不显示
 #home-card-officallinks {
 	.home-link {
